--- a/Frontend.html
+++ b/Frontend.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <header>
-        <a href="#" class="logo"><img src="codepen-line.png" alt=""></a>
+        <a href="#" class="logo"><img src="coding digital logo design template, a Branding & Logo Template by Vectoryzen.png" alt=""></a>
         <ul class="menulist">
            <a href="#home" class="active">Home</a>
            <a href="#about">About Me</a>
